# Sympp

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Axioms.hpp  CodeGen.hpp  CoreOps.hpp  CoreTypes.hpp  Expr.hpp  Polynomials.hpp  Utils.hpp
src/: main.cpp
test/: rewrite.cpp  rewrite.py
